# nx-public

./: .gitignore  .gitmodules  .treefmt.toml  README.md  flake.nix  pyproject.toml
.claude-plugin/: marketplace.json
.zed/: settings.json
config/: keyboard.yaml
default/: default.nix
default/bases/overlays/: inetutils.nix
default/users/: home.nix
desktop/users/: keyboard.yaml  programs.yaml
desktop/users/default/scripts/nx/: default.nix  pyproject.toml
desktop/users/default/scripts/nx/syncers/: config.py  sync.py  utils.py
homes/aarch64-darwin/user@desktop/: default.nix
homes/x86_64-linux/user@server/: default.nix
lib/nx/: brew.nix  default.nix  gate.nix  paths.nix
modules/common/system/: nix-common.nix  shells.nix
modules/darwin/: core.nix  default.nix  options.nix
modules/darwin/default/: default.nix
modules/darwin/desktop/: default.nix
modules/darwin/lib/: homebrew.nix
modules/darwin/system/: atrun.nix  desktop.nix  homebrew.nix  limits.nix  macOS.nix  nix.nix  ramfs.nix  security.nix
modules/home/: core.nix  default.nix  options.nix
modules/home/default/: default.nix
modules/home/desktop/: default.nix
modules/home/lib/: default.nix  mise.nix  scripts.nix  symlink.nix
modules/home/programs/: base.nix  desktop.nix
modules/home/secrets/: age.nix
modules/home/server/: default.nix
modules/nixos/: core.nix  default.nix  options.nix
overlays/age/: default.nix
overlays/fish/: default.nix
overlays/mdformat/: default.nix
overlays/nur/: default.nix
overlays/safe-rm/: default.nix
overlays/unstable/: default.nix
(+104 files in other folders)
